# autumnframework

./: .gitignore  CMakeLists.txt
doc/CppDoc/: index-all.html  index-allclasses-frame.html  index-deprecated-list.html  index-overview-frame.html  index-overview-tree.html  index.htm
doc/CppDoc/projects/autumnframework/: AutumnConfig.cpp.html  AutumnConfig.h.html  AutumnDefinition.h.html  AutumnException.h.html  AutumnLog.cpp.html  AutumnLog.h.html  (+33 more)
include/: IAutumnType.h  IBeanFactory.h  IBeanWrapper.h
include/AutumnGen/: ClassElmt.h  Configuration.h  DocCommentElmt.h  ElmtFactory.h  Enum_UnionElmt.h  FieldElmt.h  GenException.h  HeadFile.h  IElement.h  MethodElmt.h  NamespaceElmt.h  Parameter.h  StructElmt.h  TypedefElmt.h  Util.h
include/core/: AutumnConfig.h  AutumnDefinition.h  AutumnException.h  AutumnLog.h  BasicType.h  BeanConfig.h  BeanFactoryImpl.h  BeanManager.h  BeanProperty.h  ConsoleLogger.h  DynamicLibrary.h  FileLogger.h  ILibrary.h  ILogAdapter.h  IResource.h  LocalLibrary.h  MapHashTable.h  ObjectType.h  PointerType.h  PropertyDefinition.h  StringType.h  ValueWrapper.h  XMLResource.h
include/interface/: Basic.h  TypeManager.h
src/: AutumnConfig.cpp  Basic.cpp  BeanManager.cpp  BeanProperty.cpp  IBeanWrapper.cpp  LocalLibrary.cpp  PointerType.cpp  ValueWrapper.cpp
src/AutumnGen/: AutumnGen.cpp  ClassElmt.cpp  Configuration.cpp  DocCommentElmt.cpp  ElmtFactory.cpp  HeadFile.cpp  MethodElmt.cpp  NamespaceElmt.cpp  Parameter.cpp  Util.cpp
src/core/: AutumnLog.cpp  BeanConfig.cpp  BeanFactoryImpl.cpp  TypeManager.cpp  XMLResource.cpp
